# voxtty

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md  compose.yaml  install.sh  test_mcp_server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  copyright  postinst  prerm  rules
packaging/assets/: voxtty.service
packaging/scripts/: build-deb.sh
prompts/: README.md  assistant.md  code.md  command.md  screen.md  translate.md
src/: app_state.rs  controls.rs  conversation.rs  elevenlabs_tts.rs  main.rs  mcp_tools.rs  model_selector.rs  models_cache.rs  modes.rs  openai_tts.rs  processors.rs  processors_assistant.rs  processors_conversation.rs  processors_transcription.rs  realtime.rs  screen_capture.rs  skills.rs  sounds.rs  tts_client.rs  tui.rs
src/platform/: linux.rs  macos.rs  mod.rs  unified.rs  windows.rs
tools/: PRONUNCIATION_DICTIONARY.md  create_voxtty_dict.sh  update_pronunciation.sh
