[package]
name = "voxtty"
version = "0.1.0"
edition = "2021"
authors = ["Jean-Francois Laflamme <meetjeff@pm.me>"]
description = "The power of whisper — your voice commands. Dictate, code, command, and converse on Linux."
repository = "https://github.com/jflaflamme/voxtty"
license = "GPL-2.0"
keywords = ["voice", "speech-to-text", "whisper", "transcription", "accessibility"]
categories = ["accessibility", "multimedia::audio"]

[dependencies]
cpal = "0.15"
hound = "3.5"
rodio = "0.19"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["multipart", "blocking", "json"] }
anyhow = "1.0"
dialoguer = "0.11"
webrtc-vad = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
rdev = "0.5"
toml = "0.8"
dirs = "5.0"
chrono = "0.4"

# WebSocket support for realtime transcription
tungstenite = { version = "0.24", features = ["native-tls"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
http = "1.0"
url = "2.5"
parking_lot = "0.12"

# TUI support
ratatui = "0.29"
crossterm = "0.28"

# Cross-platform dependencies (Linux, macOS, Windows)
tray-icon = "0.21"
muda = "0.15"
enigo = "0.6"
ctrlc = "3.5.1"

# Linux-specific (keeping ksni as fallback option)
[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.2"
libc = "0.2"

[[bin]]
name = "voxtty"
path = "src/main.rs"
